
For better or for worse, they have changed the registration methods for blocks and items; ItemBlocks also require
  explicit registration of the Item (previously, Forge did it automatically).

BlockRenderLayer ->  BlockRenderLayer

BlockState has become BlockStateContainer

WorldRenderer has become VertexBuffer

AxisAlignedBB, ModelResourceLocation, and BlockPos have moved.

todo: understand why some item default appearance is now face-on instead of isometric

For some reason, not longer copied assets to the run folder:
C:\Users\TGG\IdeaProjects\MinecraftByExample1-10-2\out\production\MinecraftByExample1-10-2\assets\minecraftbyexample
See FMLClientHandler::addModAsResource()

Addition of left and right hand means the item transforms have changed.
Now have:
    "thirdperson_righthand":
    "thirdperson_lefthand":
    "firstperson_righthand":
    "firstperson_lefthand":

ISmartItemModel, ISmartBlockModel, IFlexibleBakedModel are all gone
They are no longer there because they are no longer needed.
IBakedModel now has has a IBlockState argument in getQuads and ItemOverrideList (returned from IBakedModel#getOverrides) has the functionality of ISmartItemModel.


-----------

New block & Item registration:

Instead of creating your Block and registering it with GameRegistry.registerBlock, create your Block, set its registry name (using the IForgeRegistryEntry#setRegistryName method or one of the overloads from IForgeRegistryEntry.Impl, all of which are inherited by the Block class) and register it with GameRegistry.register.

You also need to create the ItemBlock, set its registry name to the Block's registry name and register it with GameRegistry.register.

The same process applies to any other IForgeRegistryEntry implementation (e.g. Item, BiomeGenBase, SoundEvent): create the instance, set its registry name and then register it with GameRegistry.register.
