@@ -1,10 +1,45 @@
 {
   "parent": "minecraftbyexample:block/mbe02_block_partial_model",
   "display": {
-    "thirdperson": {
-      "rotation": [ 10, -45, 170 ],
-      "translation": [ 0, 1.5, -2.75 ],
-      "scale": [ 0.375, 0.375, 0.375 ]
+    "thirdperson_righthand": {
+      "rotation": [ 66, 2, 0 ],
+      "translation": [ 0.00, 5.50, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "thirdperson_lefthand": {
+      "rotation": [ 66, 2, 0 ],
+      "translation": [ 0.00, 5.50, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "firstperson_righthand": {
+      "rotation": [ 26, 18, 0 ],
+      "translation": [ -0.50, 7.75, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "firstperson_lefthand": {
+      "rotation": [ 26, 18, 0 ],
+      "translation": [ -0.50, 7.75, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "gui": {
+      "rotation": [ 26, 44, 0 ],
+      "translation": [ 0.00, 2.75, 0.00 ],
+      "scale": [ 0.80, 0.80, 0.80 ]
+    },
+    "head": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 0.00, 0.00 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "fixed": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 0.00, 0.00 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "ground": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 4.25, 0.00 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
     }
   }
 }
