@@ -1,10 +1,45 @@
 {
   "parent": "minecraftbyexample:block/mbe03_block_variants_model_blue",
   "display": {
-    "thirdperson": {
-      "rotation": [ 10, -45, 170 ],
-      "translation": [ 0, 1.5, -2.75 ],
-      "scale": [ 0.375, 0.375, 0.375 ]
+    "thirdperson_righthand": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.50, 5.75, 1.75 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "thirdperson_lefthand": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.50, 5.75, 1.75 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "firstperson_righthand": {
+      "rotation": [ 358, 324, 2 ],
+      "translation": [ -2.50, 6.00, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "firstperson_lefthand": {
+      "rotation": [ 358, 324, 2 ],
+      "translation": [ -2.50, 6.00, 3.25 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
+    },
+    "gui": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 0.50, 0.00 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "head": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 0.00, 0.00 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "fixed": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 0.00, 0.00 ],
+      "scale": [ 1.00, 1.00, 1.00 ]
+    },
+    "ground": {
+      "rotation": [ 0, 0, 0 ],
+      "translation": [ 0.00, 4.25, 0.00 ],
+      "scale": [ 0.60, 0.60, 0.60 ]
     }
   }
 }
