@@ -17,7 +17,9 @@ WorldRenderer has become VertexBuffer
 
 AxisAlignedBB, ModelResourceLocation, and BlockPos have moved.
 
-todo: understand why some item default appearance is now face-on instead of isometric
+The appearance of some items and blocks has changed because the isGui3D no longer affects the rotation, i.e.
+  3D blocks previously defaulted to an isometric view, but now they are the same as the default face-on view.
+  isGui3D now affects lighting only.
 
 For some reason, not longer copied assets to the run folder:
 C:\Users\TGG\IdeaProjects\MinecraftByExample1-10-2\out\production\MinecraftByExample1-10-2\assets\minecraftbyexample
@@ -33,7 +35,6 @@ Now have:
 ISmartItemModel, ISmartBlockModel, IFlexibleBakedModel are all gone
 They are no longer there because they are no longer needed.
 IBakedModel now has has a IBlockState argument in getQuads and ItemOverrideList (returned from IBakedModel#getOverrides) has the functionality of ISmartItemModel.
-
 
 -----------
 
